tests/golden/errors/unused_binding.stderr
error[unused]: unused binding `x`
  --> unused_binding.kso:2:3
   2 |   x = 1
         ^
